[tool.poetry]
name = "message-channel"
version = "0.1.0"
description = ""
authors = ["devinlife <devinlifeidea@gmail.com>"]
readme = "README.md"
packages = [{include = "message_channel"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
